fix: made the text in the button clearly visible

--- a/styles/Game.module.scss
+++ b/styles/Game.module.scss
@@ -21,6 +21,7 @@
     width: 80%;
     height: 100%;
     margin: 0 auto;
+    margin-top: -4.5em;
 }
 
 .rhs {
